--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
   "dependencies": {
     "axios": "^0.21.1",
     "next": "11.0.1",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "styled-components": "^5.3.0"
+    "react": "^16.8",
+    "react-dom": "^16.8",
+    "react-is": "^16.8",
+    "styled-components": "^5.0.0"
   },
   "devDependencies": {
     "@types/react": "17.0.11",
